--- a/assets/stylesheet/index.css
+++ b/assets/stylesheet/index.css
@@ -1,33 +1,43 @@
-main {
+.content {
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    overflow: hidden;
-    color: #f8f9fa;
 }
 
-.background {
-    position: fixed;
+.description {
+    display: inline;
+}
+
+.accountsecureimage {
+    position: relative;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    filter: brightness(50%) blur(1px);
-    background-color: #4a4aff;
-    opacity: 0.8;
-    background-image: repeating-radial-gradient( circle at 0 0, transparent 0, #4a4aff 10px ), repeating-linear-gradient( #1919a555, #1919a5 );
-    z-index: -1;
+    width: fit-content;
 }
 
-@media only screen and (min-width: 992px) {
-    .nav-item {
-        scale: 1;
-        transition: all 0.3s ease;
+.usershield {
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.cogwheel {
+    position: absolute;
+    bottom: -30px;
+    left: 200px;
+    animation: spin 5000ms linear infinite;
+}
+
+@media only screen and (max-width: 711px) {
+    .content {
+        flex-direction: column;
     }
-    
-    .nav-item:hover {
-        scale: 1.2;
-        transition: all 0.3s ease;
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
     }
 }
